エラー系修正

--- a/appproject/accounts/templates/accounts/karihome.html
+++ b/appproject/accounts/templates/accounts/karihome.html
@@ -489,9 +489,11 @@
                     message: 'さいしょに、「システム」をつくってみよう！<br>したの<strong>システムボタン</strong>をおしてね！💻',
                     requireClick: true,
                     showSkip: true,
-                    onClick: function() {
+                    onNext: function() {
+                        console.log('🎯 システムボタンがクリックされました');
                         // システムボタンがクリックされた後、次の画面でチュートリアルを続けるフラグをセット
                         sessionStorage.setItem('tutorial_step1_continue', 'true');
+                        console.log('📝 tutorial_step1_continue フラグを設定しました');
                     }
                 }
             ];
